# UCS654_TOPSIS

./: README.md  topsis.py
part1_CLI/: topsis.py
part2_package/: pyproject.toml
part2_package/Topsis_sneha_102303033.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
part2_package/topsis_sneha_102303033/: __init__.py  core.py
part3_web/api/: index.py
