[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Topsis-sneha-102303033"
version = "0.1.1"
description = "TOPSIS implementation for multi-criteria decision making"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }
dependencies = [
  "pandas>=1.5.0",
  "numpy>=1.24.0"
]


